--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -1,11 +1,125 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [Advent of Code 2021](https://adventofcode.com/2021)\n",
+    "\n",
+    "Partially inspired by [Norvig's pytudes](https://github.com/norvig/pytudes/blob/main/ipynb/Advent-2020.ipynb), although I probably won't be using the same style."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Imports\n",
+    "\n",
+    "from typing import Dict, List, Iterable, Callable, TypeVar\n",
+    "\n",
+    "T = TypeVar('T')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helper functions\n",
+    "\n",
+    "def data(day: int, parser: Callable[[str], T]) -> List[T]:\n",
+    "    with open(f\"../data/2021/day{day}.txt\") as f:\n",
+    "        return [parser(line.strip()) for line in f.readlines()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 1\n",
+    "\n",
+    "Determine number of increments in list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data1 = data(1, int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1688"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day1(data: List[int]) -> int:\n",
+    "  count, current = 0, data[0]\n",
+    "  for i in data[1:]:\n",
+    "    if i > current:\n",
+    "      count += 1\n",
+    "    current = i\n",
+    "  return count\n",
+    "\n",
+    "day1(data1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1728"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def win3(data: List[int]) -> List[int]:\n",
+    "  for i in range(len(data) - 2):\n",
+    "    yield sum(data[i:i+3])\n",
+    "\n",
+    "day1(list(win3(data1)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scratch"
+   ]
   }
  ],
  "metadata": {
