--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -6,28 +6,27 @@
    "source": [
     "# [Advent of Code 2021](https://adventofcode.com/2021)\n",
     "\n",
-    "Partially inspired by [Norvig's pytudes](https://github.com/norvig/pytudes/blob/main/ipynb/Advent-2020.ipynb), although I probably won't be using the same style."
+    "Partially inspired by [Norvig's pytudes](https://github.com/norvig/pytudes/blob/main/ipynb/Advent-2020.ipynb), although I probably won't be using the same style.\n",
+    "\n",
+    "Goals\n",
+    "------\n",
+    "* Try to finish all gold stars on day of puzzle\n",
+    "* Learn new python features\n",
+    "* Investigate github copilot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "\n",
-    "from typing import Dict, List, Iterable, Callable, TypeVar\n",
+    "from typing import Callable, TypeVar\n",
     "\n",
-    "T = TypeVar('T')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "T = TypeVar('T')\n",
+    "\n",
     "# Helper functions\n",
     "\n",
     "def data(day: int, parser: Callable[[str], T]) -> List[T]:\n",
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -64,13 +63,13 @@
        "1688"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def day1(data: List[int]) -> int:\n",
+    "def day1(data: list[int]) -> int:\n",
     "  count, current = 0, data[0]\n",
     "  for i in data[1:]:\n",
     "    if i > current:\n",
@@ -98,7 +97,7 @@
     }
    ],
    "source": [
-    "def win3(data: List[int]) -> List[int]:\n",
+    "def win3(data: list[int]) -> list[int]:\n",
     "  for i in range(len(data) - 2):\n",
     "    yield sum(data[i:i+3])\n",
     "\n",
@@ -109,12 +108,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 2"
+    "## Day 2\n",
+    "\n",
+    "Maintain sum of depth and length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data2 = data('2', str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1451208"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day2(data: list[str]) -> int:\n",
+    "  depth, length = 0, 0\n",
+    "  for i in data:\n",
+    "    mode, amount = i.split(' ')\n",
+    "    amount = int(amount)\n",
+    "    match mode:\n",
+    "      case 'forward':\n",
+    "        length += amount\n",
+    "      case 'down':\n",
+    "        depth += amount\n",
+    "      case 'up':\n",
+    "        depth -= amount\n",
+    "  return depth * length\n",
+    "\n",
+    "day2(data2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1620141160"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day2_2(data: list[str]) -> int:\n",
+    "  depth, length, aim = 0, 0, 0\n",
+    "  for i in data:\n",
+    "    mode, amount = i.split(' ')\n",
+    "    amount = int(amount)\n",
+    "    match mode:\n",
+    "      case 'forward':\n",
+    "        length += amount\n",
+    "        depth += amount * aim\n",
+    "      case 'down':\n",
+    "        aim += amount\n",
+    "      case 'up':\n",
+    "        aim -= amount\n",
+    "  return depth * length\n",
+    "\n",
+    "day2_2(data2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4
  },
