--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
     "\n",
     "# Helper functions\n",
     "\n",
-    "def data(day: int, parser: Callable[[str], T]) -> List[T]:\n",
+    "def data(day: int, parser: Callable[[str], T]) -> list[T]:\n",
     "    with open(f\"../data/2021/day{day}.txt\") as f:\n",
     "        return [parser(line.strip()) for line in f.readlines()]"
    ]
@@ -195,12 +195,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 3"
+    "## Day 3\n",
+    "\n",
+    "Can probably be solved with bit tricks, but I'll just implement them as array problems."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data3 = data('3', str)\n",
+    "\n",
+    "def binlist2int(l: list[int]) -> int:\n",
+    "  return int(\"\".join(str(i) for i in l), 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2954600"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day3(data: list[int]):\n",
+    "  total = len(data)\n",
+    "  size = len(data[0])\n",
+    "  sums = [0] * size\n",
+    "  for binary in data:\n",
+    "    for i, v in enumerate(binary):\n",
+    "      sums[i] += int(v)\n",
+    "  \n",
+    "  gamma = [0 if total - i > i else 1 for i in sums]\n",
+    "  epsilon = [i ^ 1 for i in gamma]\n",
+    "  return binlist2int(gamma) * binlist2int(epsilon)\n",
+    "\n",
+    "day3(data3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1662846"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def find_boundary(data: list[str], start: int, end: int, index: int) -> int:\n",
+    "  # TODO: this can be implemented as binary search\n",
+    "  for i, v in enumerate(data[start:end+1]):\n",
+    "    if v[index] == '1':\n",
+    "      return start + i\n",
+    "  return start\n",
+    "\n",
+    "def scrubber(data: list[str], lcd: bool) -> int:\n",
+    "  # Run \"binary search\"\n",
+    "  low, high = 0, len(data) - 1\n",
+    "  for target in range(len(data[0])):\n",
+    "    index = low + ((high - low + 1) // 2)\n",
+    "    item = data[index][target]\n",
+    "\n",
+    "    if lcd and item == '0':\n",
+    "      # Select all '1's in the bottom half\n",
+    "      low = find_boundary(data, index, high, target)\n",
+    "    elif lcd and item == '1':\n",
+    "      # Select all '0's in the top half\n",
+    "      high = find_boundary(data, low, index, target) - 1\n",
+    "    elif item == '0':\n",
+    "      # Select all '0's from the top through to the bottom half\n",
+    "      high = find_boundary(data, index, high, target) - 1\n",
+    "    else:\n",
+    "      # Select all '1' starting from the top half to the end\n",
+    "      low = find_boundary(data, low, index, target)\n",
+    "    \n",
+    "    if low == high:\n",
+    "      break\n",
+    "\n",
+    "  return data[low]\n",
+    "\n",
+    "def day3_2(data: list[str]) -> int:\n",
+    "  data = sorted(data)\n",
+    "  oxygen = scrubber(data, False)\n",
+    "  c02 = scrubber(data, True)\n",
+    "  return binlist2int(oxygen) * binlist2int(c02)\n",
+    "\n",
+    "day3_2(data3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 4\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
