--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,12 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "\n",
+    "from collections import defaultdict\n",
+    "import numpy as np\n",
+    "import re\n",
     "from typing import Callable, TypeVar\n",
     "\n",
     "T = TypeVar('T')\n",
@@ -306,16 +309,154 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 4\n"
+    "## Day 4\n",
+    "Reference storing Bingo Boards"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scratch"
+    "data4 = data('4', str)\n",
+    "\n",
+    "class BingoBoard:\n",
+    "  def __init__(self):\n",
+    "    self.board = []\n",
+    "    self.size = 0\n",
+    "    # TODO: this state should be stored elsewhere\n",
+    "    self.rows = []\n",
+    "    self.cols = []\n",
+    "    \n",
+    "  def add_row(self, row: list[int]):\n",
+    "    self.board.append(row)\n",
+    "    if not self.size:\n",
+    "      self.size = len(row)\n",
+    "      self.rows = [0] * self.size\n",
+    "      # Assume column size is same as row size\n",
+    "      self.cols = [0] * self.size\n",
+    "\n",
+    "def parse_data4(data: list[str]) -> tuple[list[int], list[BingoBoard]]:\n",
+    "  numbers = [int(x) for x in data[0].split(',')]\n",
+    "  boards, board = [], None\n",
+    "  for row in data[1:]:\n",
+    "    if row == '':\n",
+    "      board = BingoBoard()\n",
+    "      boards.append(board)\n",
+    "    else:\n",
+    "      board.add_row([int(x) for x in re.split('\\s+', row)])\n",
+    "  return numbers, boards\n",
+    "\n",
+    "def analyze_boards(boards: list[BingoBoard]) -> dict[list[tuple[int,int,BingoBoard]]]:\n",
+    "  # For each number, store the row and column with every board it was found in\n",
+    "  keys = defaultdict(lambda: [])\n",
+    "  for board in boards:\n",
+    "    for i, row in enumerate(board.board):\n",
+    "      for j, v in enumerate(row):\n",
+    "        keys[v].append((i, j, board))\n",
+    "  return keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4512"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calculate_score(board: BingoBoard, numbers: set[int]) -> int:\n",
+    "  score = 0\n",
+    "  for row in board.board:\n",
+    "    for v in row:\n",
+    "      if v not in numbers:\n",
+    "        score += v\n",
+    "  return score\n",
+    "\n",
+    "def day4(data: list[str]) -> int:\n",
+    "  numbers, boards = parse_data4(data4)  \n",
+    "  keys = analyze_boards(boards)\n",
+    "  selected = set()\n",
+    "  for number in numbers:\n",
+    "    if number in selected:\n",
+    "      continue\n",
+    "    selected.add(number)\n",
+    "    for i, j, board in keys[number]:\n",
+    "      board.rows[i] += 1\n",
+    "      board.cols[j] += 1\n",
+    "      if board.size == board.rows[i] or board.size == board.cols[j]:\n",
+    "        return calculate_score(board, selected) * number\n",
+    "\n",
+    "day4(data4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5586"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def retroactive_selected(inputs: list[int], end: int) -> int:\n",
+    "  index = inputs.index(end) + 1\n",
+    "  return set(inputs[:index])\n",
+    "\n",
+    "def day4_2(data: list[str]) -> int:\n",
+    "  numbers, boards = parse_data4(data4)  \n",
+    "  keys = analyze_boards(boards)\n",
+    "  selected = set()\n",
+    "  completed, last_winner, last_num = set(), None, 0\n",
+    "  for number in numbers:\n",
+    "    if number in selected:\n",
+    "      continue\n",
+    "    selected.add(number)\n",
+    "    for i, j, board in keys[number]:\n",
+    "      if board in completed:\n",
+    "        continue\n",
+    "      board.rows[i] += 1\n",
+    "      board.cols[j] += 1\n",
+    "      if board.size == board.rows[i] or board.size == board.cols[j]:\n",
+    "        completed.add(board)\n",
+    "        last_winner, last_num = board, number\n",
+    "  return calculate_score(last_winner, retroactive_selected(numbers, last_num)) * last_num\n",
+    "\n",
+    "day4_2(data4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Scratch"
    ]
   }
  ],
