--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
     "  return score\n",
     "\n",
     "def day4(data: list[str]) -> int:\n",
-    "  numbers, boards = parse_data4(data4)  \n",
+    "  numbers, boards = parse_data4(data)  \n",
     "  keys = analyze_boards(boards)\n",
     "  selected = set()\n",
     "  for number in numbers:\n",
@@ -422,7 +422,7 @@
     "  return set(inputs[:index])\n",
     "\n",
     "def day4_2(data: list[str]) -> int:\n",
-    "  numbers, boards = parse_data4(data4)  \n",
+    "  numbers, boards = parse_data4(data)  \n",
     "  keys = analyze_boards(boards)\n",
     "  selected = set()\n",
     "  completed, last_winner, last_num = set(), None, 0\n",
@@ -447,16 +447,144 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 5"
+    "## Day 5\n",
+    "\n",
+    "Some possible ideas for solutions: \n",
+    "1. use vector products between each pair (n^2) and remove duplicates somehow\n",
+    "2. use a 2-d interval tree and detect where sums on a point are greater than 1\n",
+    "3. fill a 2-d grid and iterate through points\n",
+    "\n",
+    "Implementing with idea 3 for now"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Scratch"
+    "Line = tuple[tuple[int, int], tuple[int, int]]\n",
+    "\n",
+    "def parse5(line: str) -> list[Line]:\n",
+    "  result = re.split('[\\s,]', line)\n",
+    "  return (\n",
+    "    (int(result[0]), int(result[3])), # xs\n",
+    "    (int(result[1]), int(result[4])) # ys\n",
+    "  )\n",
+    "\n",
+    "data5 = data('5', parse5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4728"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class BaseHydroVents:\n",
+    "  def __init__(self, size: int) -> None:\n",
+    "    self.grid = np.zeros([size, size])\n",
+    "\n",
+    "  def add_line(self, line: Line) -> None:\n",
+    "    if line[0][0] == line[0][1]:\n",
+    "      self.add_vertical_line(sorted(line[1]), line[0][0])\n",
+    "    elif line[1][0] == line[1][1]:\n",
+    "      self.add_horizontal_line(sorted(line[0]), line[1][0])\n",
+    "    else:\n",
+    "      self.add_diagonal_line(line)\n",
+    "\n",
+    "  def add_diagonal_line(self, line: Line) -> None:\n",
+    "    # Stub\n",
+    "    return\n",
+    "\n",
+    "  def add_horizontal_line(self, xs: tuple[int, int], y: int) -> None:\n",
+    "    for x in range(xs[0], xs[1] + 1):\n",
+    "      self.grid[y][x] += 1\n",
+    "\n",
+    "  def add_vertical_line(self, ys: tuple[int, int], x: int) -> None:\n",
+    "    for y in range(ys[0], ys[1] + 1):\n",
+    "      self.grid[y][x] += 1\n",
+    "\n",
+    "def max_vent_point(data: list[Line]) -> int:\n",
+    "  return max([max(max(x[0]), max(x[1])) for x in data])\n",
+    "\n",
+    "def day5(data: list[Line]) -> int:\n",
+    "  size = max_vent_point(data) + 1\n",
+    "  vents = BaseHydroVents(size)\n",
+    "  for line in data:\n",
+    "    vents.add_line(line)\n",
+    "  mask = vents.grid > 1\n",
+    "  return np.count_nonzero(mask)\n",
+    "\n",
+    "day5(data5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17717"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class HydroVents (BaseHydroVents):\n",
+    "  def __init__(self, size: int) -> None:\n",
+    "    self.grid = np.zeros([size, size])\n",
+    "\n",
+    "  def add_diagonal_line(self, line: Line) -> None:\n",
+    "    # Only supports 45 degree lines\n",
+    "    xs, ys = line[0], line[1]\n",
+    "    dx = 1 if xs[1] > xs[0] else -1\n",
+    "    dy = 1 if ys[1] > ys[0] else -1\n",
+    "    length = abs(xs[1] - xs[0]) + 1\n",
+    "    for i in range(length):\n",
+    "      self.grid[ys[0] + dy * i][xs[0] + dx * i] += 1\n",
+    "\n",
+    "def day5_2(data: list[Line]) -> int:\n",
+    "  size = max_vent_point(data) + 1\n",
+    "  vents = HydroVents(size)\n",
+    "  for line in data:\n",
+    "    vents.add_line(line)\n",
+    "  mask = vents.grid > 1\n",
+    "  return np.count_nonzero(mask)\n",
+    "\n",
+    "day5_2(data5)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scratch"
    ]
   }
  ],
