--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -27,6 +27,7 @@
     "import numpy as np\n",
     "import re\n",
     "from typing import Callable, TypeVar\n",
+    "from functools import lru_cache\n",
     "\n",
     "T = TypeVar('T')\n",
     "\n",
@@ -454,7 +455,7 @@
     "2. use a 2-d interval tree and detect where sums on a point are greater than 1\n",
     "3. fill a 2-d grid and iterate through points\n",
     "\n",
-    "Implementing with idea 3 for now"
+    "Implementing with idea 3 for now, since size of grid is small relative to number of lines"
    ]
   },
   {
@@ -575,12 +576,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 6"
+    "## Day 6\n",
+    "\n",
+    "Seems like a DP problem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data6 = data('6', lambda x: [int(n) for n in x.split(',')])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "394994"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@lru_cache(None)\n",
+    "def spawns6(days: int):\n",
+    "  if days < 6:\n",
+    "    return 1\n",
+    "  return spawns6(days-7) + spawns8(days-7)\n",
+    "\n",
+    "@lru_cache(None)\n",
+    "def spawns8(days: int):\n",
+    "  if days < 8:\n",
+    "    return 1\n",
+    "  return spawns6(days-9) + spawns8(days-9)\n",
+    "\n",
+    "def day6(data: list[int], days: int) -> int:\n",
+    "  result = [spawns6(days + 6 - i) for i in data]\n",
+    "  return sum(result)\n",
+    "\n",
+    "day6(data6, 79)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1765974267455"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day6(data6, 255)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 7\n",
+    "\n",
+    "TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
