--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -25,6 +25,7 @@
     "\n",
     "from collections import defaultdict\n",
     "import numpy as np\n",
+    "import numpy.typing as npt\n",
     "import re\n",
     "from typing import Callable, TypeVar\n",
     "from functools import lru_cache\n",
@@ -34,8 +35,11 @@
     "# Helper functions\n",
     "\n",
     "def data(day: int, parser: Callable[[str], T]) -> list[T]:\n",
-    "    with open(f\"../data/2021/day{day}.txt\") as f:\n",
-    "        return [parser(line.strip()) for line in f.readlines()]"
+    "  with open(f\"../data/2021/day{day}.txt\") as f:\n",
+    "    return [parser(line.strip()) for line in f.readlines()]\n",
+    "\n",
+    "def split_csv_row(row: str) -> list[int]:\n",
+    "  return [int(x) for x in row.split(',')]"
    ]
   },
   {
@@ -583,11 +587,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data6 = data('6', lambda x: [int(n) for n in x.split(',')])[0]"
+    "data6 = data('6', split_csv_row)"
    ]
   },
   {
@@ -652,12 +656,102 @@
    "source": [
     "## Day 7\n",
     "\n",
-    "TODO"
+    "Minimize v-shaped curve $ |F(c)| $ where $ A - c = F $ using binary search"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data7 = data(7, split_csv_row)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "343605"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CostFunction7 = Callable[[npt.ArrayLike], int]\n",
+    "def fuel_used(input: npt.ArrayLike) -> int:\n",
+    "  return np.sum(np.abs(input))\n",
+    "\n",
+    "def deltas(input: npt.ArrayLike, current: int, cost: CostFunction7) -> tuple[int, int, int]:\n",
+    "  y = cost(input - current)\n",
+    "  left = cost(input - current - 1)\n",
+    "  right = cost(input - current + 1)\n",
+    "  return left, y, right\n",
+    "\n",
+    "def bsearch7(input: npt.ArrayLike, low: int, high: int, cost: CostFunction7) -> int:\n",
+    "  while low < high:\n",
+    "    mid = (low + high) // 2\n",
+    "    left, y, right = deltas(input, mid, cost)\n",
+    "    if left < y:\n",
+    "      low = mid + 1\n",
+    "    elif right < y:\n",
+    "      high = mid\n",
+    "    else:\n",
+    "      low, high = mid, mid\n",
+    "  return mid\n",
+    "\n",
+    "def day7(data: list[int], cost: CostFunction7) -> int:\n",
+    "  input = np.array(data)\n",
+    "  hmin, hmax = np.min(input), np.max(input)\n",
+    "  result = bsearch7(input, hmin, hmax, cost)\n",
+    "  return cost(input - result)\n",
+    "\n",
+    "day7(data7, fuel_used)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "96744904"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def triangular_number(n: int) -> int:\n",
+    "  return n * (n + 1) // 2\n",
+    "\n",
+    "def fuel_used2(input: npt.ArrayLike) -> int:\n",
+    "  return np.sum(triangular_number(np.abs(input)))\n",
+    "\n",
+    "day7(data7, fuel_used2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
