--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
     "\n",
     "# Helper functions\n",
     "\n",
-    "def data(day: int, parser: Callable[[str], T]) -> list[T]:\n",
+    "def data(day: int, parser: Callable[[str], T] = str) -> list[T]:\n",
     "  with open(f\"../data/2021/day{day}.txt\") as f:\n",
     "    return [parser(line.strip()) for line in f.readlines()]\n",
     "\n",
@@ -123,11 +123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data2 = data('2', str)"
+    "data2 = data('2')"
    ]
   },
   {
@@ -210,11 +210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data3 = data('3', str)\n",
+    "data3 = data('3')\n",
     "\n",
     "def binlist2int(l: list[int]) -> int:\n",
     "  return int(\"\".join(str(i) for i in l), 2)"
@@ -320,11 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data4 = data('4', str)\n",
+    "data4 = data('4')\n",
     "\n",
     "class BingoBoard:\n",
     "  def __init__(self):\n",
@@ -695,6 +695,7 @@
     "  right = cost(input - current + 1)\n",
     "  return left, y, right\n",
     "\n",
+    "# TODO: could use scipy.optimize.minimize instead\n",
     "def bsearch7(input: npt.ArrayLike, low: int, high: int, cost: CostFunction7) -> int:\n",
     "  while low < high:\n",
     "    mid = (low + high) // 2\n",
@@ -746,12 +747,139 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 8"
+    "## Day 8\n",
+    "\n",
+    "Set intersections"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data8 = data('8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "383"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Knowns9 = dict[int, set[str]]\n",
+    "\n",
+    "items_by_length = defaultdict(lambda: None, {\n",
+    "  2: 1,\n",
+    "  3: 7,\n",
+    "  4: 4,\n",
+    "  7: 8\n",
+    "})\n",
+    "def disambiguate6(item: set[str], knowns: Knowns9) -> int:\n",
+    "    if knowns[1] - item:\n",
+    "      return 6\n",
+    "    elif not knowns[4] - item:\n",
+    "      return 9\n",
+    "    else:\n",
+    "      return 0\n",
+    "def disambiguate5(item: set[str], knowns: Knowns9) -> int:\n",
+    "    if not knowns[7] - item:\n",
+    "      return 3\n",
+    "    elif len(knowns[6] - item) == 1:\n",
+    "      return 5\n",
+    "    else:\n",
+    "      return 2\n",
+    "\n",
+    "def group_items(data: list[str]) -> tuple[Knowns9]:\n",
+    "  knowns = {}\n",
+    "  unknowns = []\n",
+    "  for i in data:\n",
+    "    item = set(i)\n",
+    "    match len(item):\n",
+    "      case 6:\n",
+    "        unknowns.append(item)\n",
+    "      case _:\n",
+    "        knowns[items_by_length[len(item)]] = item\n",
+    "  for item in unknowns:\n",
+    "    knowns[disambiguate6(item, knowns)] = item\n",
+    "  # Disambiguate5 not required to be run, we can do that while decoding the output\n",
+    "  return knowns\n",
+    "\n",
+    "def parse_line(line: str) -> str:\n",
+    "  input, output = tuple(group.split(' ') for group in line.split(' | '))\n",
+    "  knowns = group_items(input)\n",
+    "  for i in output:\n",
+    "    item = set(i)\n",
+    "    match len(item):\n",
+    "      case 5:\n",
+    "        yield disambiguate5(item, knowns)\n",
+    "      case 6:\n",
+    "        yield disambiguate6(item, knowns)\n",
+    "      case _:\n",
+    "        yield items_by_length[len(item)]\n",
+    "\n",
+    "# Overly complicated way to do what's required, but it's pretty clear what's coming in part 2\n",
+    "def day8(data: list[str]) -> int:\n",
+    "  count = 0\n",
+    "  targets = items_by_length.values()\n",
+    "  for line in data:\n",
+    "    result = parse_line(line)\n",
+    "    for number in result:\n",
+    "      if number in targets:\n",
+    "        count += 1\n",
+    "  return count\n",
+    "\n",
+    "day8(data8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "998900"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day8_2(data: list[str]) -> int:\n",
+    "  total = 0\n",
+    "  for line in data:\n",
+    "    result = parse_line(line)\n",
+    "    total += int(''.join(str(i) for i in result))\n",
+    "  return total\n",
+    "\n",
+    "day8_2(data8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
