--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,16 +874,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 9"
+    "## Day 9\n",
+    "* Part 1: numpy array masking\n",
+    "* Part 2: Recursive search from results of part 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scratch"
+    "data9 = np.array(data('9', lambda line: [int(x) for x in line]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "508"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day9(data: npt.ArrayLike) -> int:\n",
+    "  zero_row, zero_col = np.full((1, data.shape[1]), 10), np.full((data.shape[0], 1), 10)\n",
+    "  a = np.concatenate((data[1:], zero_row))\n",
+    "  b = np.concatenate((zero_row, data[:-1]))\n",
+    "  c = np.concatenate((data[:, 1:], zero_col), axis=1)\n",
+    "  d = np.concatenate((zero_col, data[:, :-1]), axis=1)\n",
+    "\n",
+    "  mask = (data - a < 0) & (data - b < 0) & (data - c < 0) & (data - d < 0)\n",
+    "  return sum(data[mask] + 1)\n",
+    "\n",
+    "day9(data9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1564640"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day9_2(data: npt.ArrayLike) -> int:\n",
+    "  claimed = set()\n",
+    "  size = data9.shape\n",
+    "\n",
+    "  def claim(x: int, y: int) -> int:\n",
+    "    if x < 0 or y < 0 or x >= size[1] or y >= size[0]:\n",
+    "      return 0\n",
+    "    if (x, y) in claimed:\n",
+    "      return 0\n",
+    "    if data[y][x] == 9:\n",
+    "      return 0\n",
+    "    claimed.add((x, y))\n",
+    "    return 1 + claim(x+1, y) + claim(x-1, y) + claim(x, y+1) + claim(x, y - 1)\n",
+    "\n",
+    "  basins = []\n",
+    "  for x in range(size[1]):\n",
+    "    for y in range(size[0]):\n",
+    "      if basin_size := claim(x, y):\n",
+    "        basins.append(basin_size)\n",
+    "  return np.prod(sorted(basins, reverse=True)[:3])\n",
+    "\n",
+    "day9_2(data9)\n"
    ]
   }
  ],
