--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -899,13 +899,13 @@
        "508"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def day9(data: npt.ArrayLike) -> int:\n",
+    "def get_basins(data: npt.ArrayLike) -> npt.ArrayLike:\n",
     "  zero_row, zero_col = np.full((1, data.shape[1]), 10), np.full((data.shape[0], 1), 10)\n",
     "  a = np.concatenate((data[1:], zero_row))\n",
     "  b = np.concatenate((zero_row, data[:-1]))\n",
@@ -913,14 +913,19 @@
     "  d = np.concatenate((zero_col, data[:, :-1]), axis=1)\n",
     "\n",
     "  mask = (data - a < 0) & (data - b < 0) & (data - c < 0) & (data - d < 0)\n",
-    "  return sum(data[mask] + 1)\n",
+    "  indices = np.where(mask)\n",
+    "  return [(index[1], index[0]) for index in zip(indices[0], indices[1])]\n",
+    "\n",
+    "def day9(data: npt.ArrayLike) -> int:\n",
+    "  basins = get_basins(data)\n",
+    "  return sum([data[y][x] for x, y in basins]) + len(basins)\n",
     "\n",
     "day9(data9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +934,7 @@
        "1564640"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,14 +954,30 @@
     "    claimed.add((x, y))\n",
     "    return 1 + claim(x+1, y) + claim(x-1, y) + claim(x, y+1) + claim(x, y - 1)\n",
     "\n",
-    "  basins = []\n",
-    "  for x in range(size[1]):\n",
-    "    for y in range(size[0]):\n",
-    "      if basin_size := claim(x, y):\n",
-    "        basins.append(basin_size)\n",
+    "  basins = [] # TODO: use 3-heap instead\n",
+    "  for (x, y) in get_basins(data):\n",
+    "    if basin_size := claim(x, y):\n",
+    "      basins.append(basin_size)\n",
     "  return np.prod(sorted(basins, reverse=True)[:3])\n",
     "\n",
     "day9_2(data9)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 10\n",
+    "TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scratch"
    ]
   }
  ],
