--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,13 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "\n",
-    "from collections import defaultdict\n",
+    "from collections import defaultdict, Counter\n",
     "import numpy as np\n",
     "import numpy.typing as npt\n",
     "import re\n",
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
        "1564640"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +960,7 @@
     "      basins.append(basin_size)\n",
     "  return np.prod(sorted(basins, reverse=True)[:3])\n",
     "\n",
-    "day9_2(data9)\n"
+    "day9_2(data9)"
    ]
   },
   {
@@ -968,17 +968,119 @@
    "metadata": {},
    "source": [
     "## Day 10\n",
-    "TODO"
+    "Stack stuff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scratch"
+    "data10 = data('10')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "319233"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opens = {\n",
+    "  '(': ')',\n",
+    "  '[': ']',\n",
+    "  '{': '}',\n",
+    "  '<': '>',\n",
+    "}\n",
+    "error_scores = {\n",
+    "  ')': 3,\n",
+    "  ']': 57,\n",
+    "  '}': 1197,\n",
+    "  '>': 25137,\n",
+    "}\n",
+    "\n",
+    "def find_error_line(line: str) -> str:\n",
+    "  stack = []\n",
+    "  for i in line:\n",
+    "    if i in opens:\n",
+    "      stack.append(i)\n",
+    "    elif opens[stack[-1]] == i:\n",
+    "      stack.pop()\n",
+    "    else:\n",
+    "      return i\n",
+    "  return stack\n",
+    "\n",
+    "def day10(data: list[str]) -> int:\n",
+    "  lines = ([find_error_line(line) for line in data])\n",
+    "  errors = Counter([line for line in lines if type(line) is str])\n",
+    "  return sum(error_scores[i] * errors[i] for i in errors)\n",
+    "\n",
+    "day10(data10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1118976874"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "closing_scores = {\n",
+    "  ')': 1,\n",
+    "  ']': 2,\n",
+    "  '}': 3,\n",
+    "  '>': 4,\n",
+    "}\n",
+    "\n",
+    "def closing_score(close: list[str]) -> int:\n",
+    "  score = 0\n",
+    "  for i in reversed(close):\n",
+    "    score = score * 5 + closing_scores[opens[i]]\n",
+    "  return score\n",
+    "\n",
+    "def day10_2(data: list[str]) -> int:\n",
+    "  lines = ([find_error_line(line) for line in data])\n",
+    "  scores = [closing_score(line) for line in lines if type(line) is list]\n",
+    "  mid = len(scores) // 2\n",
+    "  return sorted(scores)[mid]\n",
+    "\n",
+    "day10_2(data10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
