--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,10 @@
     "    return [parser(line.strip()) for line in f.readlines()]\n",
     "\n",
     "def split_csv_row(row: str) -> list[int]:\n",
-    "  return [int(x) for x in row.split(',')]"
+    "  return [int(x) for x in row.split(',')]\n",
+    "\n",
+    "def split_int_row(row: str) -> list[int]:\n",
+    "  return [int(x) for x in row]"
    ]
   },
   {
@@ -881,11 +884,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data9 = np.array(data('9', lambda line: [int(x) for x in line]))"
+    "data9 = np.array(data('9', split_int_row))"
    ]
   },
   {
@@ -973,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +994,7 @@
        "319233"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1013,7 @@
     "  '>': 25137,\n",
     "}\n",
     "\n",
-    "def find_error_line(line: str) -> str:\n",
+    "def handle_line10(line: str) -> str:\n",
     "  stack = []\n",
     "  for i in line:\n",
     "    if i in opens:\n",
@@ -1022,7 +1025,7 @@
     "  return stack\n",
     "\n",
     "def day10(data: list[str]) -> int:\n",
-    "  lines = ([find_error_line(line) for line in data])\n",
+    "  lines = ([handle_line10(line) for line in data])\n",
     "  errors = Counter([line for line in lines if type(line) is str])\n",
     "  return sum(error_scores[i] * errors[i] for i in errors)\n",
     "\n",
@@ -1060,7 +1063,7 @@
     "  return score\n",
     "\n",
     "def day10_2(data: list[str]) -> int:\n",
-    "  lines = ([find_error_line(line) for line in data])\n",
+    "  lines = ([handle_line10(line) for line in data])\n",
     "  scores = [closing_score(line) for line in lines if type(line) is list]\n",
     "  mid = len(scores) // 2\n",
     "  return sorted(scores)[mid]\n",
@@ -1080,7 +1083,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data11 = data('11')"
+   ]
   }
  ],
  "metadata": {
