--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,18 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "\n",
     "from collections import defaultdict, Counter\n",
+    "import itertools\n",
+    "from functools import lru_cache\n",
     "import numpy as np\n",
     "import numpy.typing as npt\n",
     "import re\n",
     "from typing import Callable, TypeVar\n",
-    "from functools import lru_cache\n",
     "\n",
     "T = TypeVar('T')\n",
     "\n",
@@ -1034,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1044,7 @@
        "1118976874"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,16 +1076,118 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 11"
+    "## Day 11\n",
+    "Array operations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data11 = data('11')"
+    "data11 = np.array(data('11', split_int_row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1719"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def run_flashes(data: npt.ArrayLike, flashed: set[int], size: tuple[int, int], debug = False) -> bool:\n",
+    "  changed = False\n",
+    "  for i in reversed(np.argsort(data.flatten())):\n",
+    "    x, y = i % size[1], i // size[1]\n",
+    "    if data[y][x] > 9 and i not in flashed:\n",
+    "      for index in itertools.product([x-1, x, x+1], [y-1, y, y+1]):\n",
+    "        if index[0] == x and index[1] == y:\n",
+    "          continue\n",
+    "        if index[0] < 0 or index[0] >= size[1]:\n",
+    "          continue\n",
+    "        if index[1] < 0 or index[1] >= size[0]:\n",
+    "          continue\n",
+    "        data[index[1]][index[0]] += 1\n",
+    "      flashed.add(i)\n",
+    "      changed = True\n",
+    "  return changed\n",
+    "\n",
+    "def check_flashes(data: npt.ArrayLike, size: tuple[int, int], debug = False) -> set[int]:\n",
+    "  flashed = set()\n",
+    "  changed = True\n",
+    "  data += 1\n",
+    "  while changed:\n",
+    "    changed = run_flashes(data, flashed, size, debug)\n",
+    "  np.put(data, list(flashed), [0])\n",
+    "  return flashed\n",
+    "\n",
+    "def day11(data: npt.ArrayLike) -> int:\n",
+    "  flashes = 0\n",
+    "  size = data.shape\n",
+    "  current = data.copy()\n",
+    "  for _ in range(100):\n",
+    "    flashes += len(check_flashes(current, size))\n",
+    "  return flashes\n",
+    "\n",
+    "day11(data11)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "232"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day11_2(data: npt.ArrayLike) -> int:\n",
+    "  size = data.shape\n",
+    "  current = data.copy()\n",
+    "  for i in range(10000):\n",
+    "    check_flashes(current, size)\n",
+    "    if np.sum(current) == 0:\n",
+    "      return i + 1\n",
+    "  raise Exception('Too few iterations')\n",
+    "\n",
+    "day11_2(data11)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 12\n",
+    "\n",
+    "TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO"
    ]
   }
  ],
