--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1260,7 @@
        "147784"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1293,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 13"
+    "## Day 13\n",
+    "\n",
+    "Array operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data13 = data(13)\n",
+    "\n",
+    "def format_data13(data: list[str]) -> tuple[tuple[int, int], tuple[str, int]]:\n",
+    "  entries, folds = [], []\n",
+    "  x_max, y_max = 0, 0\n",
+    "  for entry in data:\n",
+    "    if ',' in entry:\n",
+    "      x, y = split_csv_row(entry)\n",
+    "      x_max, y_max = max(x, x_max), max(y, y_max)\n",
+    "      entries.append((x, y))\n",
+    "    elif 'fold' in entry:\n",
+    "      direction, position = entry.split('=')\n",
+    "      folds.append((0 if direction[-1] == 'y' else 1, int(position)))\n",
+    "\n",
+    "  result = np.zeros((y_max + 1, x_max + 1), dtype=int)\n",
+    "  for entry in entries:\n",
+    "    result[entry[1], entry[0]] = 1\n",
+    "  return result, folds\n",
+    "\n",
+    "origami, folds = format_data13(data13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "850"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# These folds only work if the fold splits the array in half\n",
+    "def fold_y(data: npt.ArrayLike, y: int) -> int:\n",
+    "  a, b = data[:y], np.flip(data[y+1:], 0)\n",
+    "  return a+b\n",
+    "def fold_x(data: npt.ArrayLike, x: int) -> int:\n",
+    "  a, b = data[:, :x], np.flip(data[:, x+1:], 1)\n",
+    "  return a+b\n",
+    "\n",
+    "def fold(data: npt.ArrayLike, fold: tuple[int, int]) -> npt.ArrayLike:\n",
+    "  return fold_y(data, fold[1]) if fold[0] == 0 else fold_x(data, fold[1])\n",
+    "  \n",
+    "def day13(data: npt.ArrayLike, folds: tuple[int, int]) -> int:\n",
+    "  for direction in folds:\n",
+    "    data = fold(data, direction)\n",
+    "    break\n",
+    "  return np.count_nonzero(data)\n",
+    "\n",
+    "day13(origami, folds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def day13_2(data: npt.ArrayLike, folds: tuple[int, int]) -> int:\n",
+    "  for direction in folds:\n",
+    "    data = fold(data, direction)\n",
+    "  return np.where(data > 0, 1, 0)\n",
+    "\n",
+    "result = day13_2(origami, folds)\n",
+    "np.savetxt('output_day13.txt', result, fmt='%d')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 14"
    ]
   },
   {
